# jupyterlab_tensorboard

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yaml  build.yml  check-release.yml
jupyter-config/nb-config/: jupyterlab_tensorboard.json
jupyterlab_tensorboard/: __init__.py  _version.py  api_handlers.py  handlers.py  tensorboard_manager.py
jupyterlab_tensorboard/labextension/: package.json
jupyterlab_tensorboard/labextension/static/: 534.da449b2dcdd8e93b4ec5.js  69.756605c6194a9be8150a.js  remoteEntry.b7adf90f90441b9c96dc.js  style.js
src/: index.ts  manager.ts  tab.ts  tensorboard.ts
style/: base.css
